/**
 * gRPC Client for communicating with Shadowd daemon
 */

import { Device, PairingCode, HealthStatus } from '../types/device';

export class GRPCClient {
  private meshIP: string;
  private port: number;
  
  constructor(meshIP: string, port: number = 50051) {
    this.meshIP = meshIP;
    this.port = port;
  }
  
  /**
   * Get device information from Shadowd
   */
  async getDeviceInfo(): Promise<Device> {
    // TODO: Implement actual gRPC call
    // This is a placeholder implementation
    
    const response = {
      id: `device-${Date.now()}`,
      name: 'Placeholder Device',
      hostname: 'placeholder-host',
      os: 'Linux',
      meshIP: this.meshIP,
      sshPort: 22,
      grpcPort: this.port,
      publicKey: 'placeholder_public_key',
      online: true,
      lastSeen: new Date(),
    };
    
    return response;
  }
  
  /**
   * Generate a pairing code for QR code scanning
   */
  async generatePairingCode(): Promise<PairingCode> {
    // TODO: Implement actual gRPC call
    // This is a placeholder implementation
    
    const response: PairingCode = {
      deviceId: `device-${Date.now()}`,
      meshIP: this.meshIP,
      sshPort: 22,
      grpcPort: this.port,
      publicKey: 'placeholder_public_key',
      timestamp: Date.now(),
      signature: 'placeholder_signature',
    };
    
    return response;
  }
  
  /**
   * Check health status of Shadowd daemon
   */
  async healthCheck(): Promise<HealthStatus> {
    // TODO: Implement actual gRPC call
    // This is a placeholder implementation
    
    const response: HealthStatus = {
      healthy: true,
      uptime: 3600,
      lastHeartbeat: new Date(),
    };
    
    return response;
  }
}

/**
 * Create a gRPC client for a specific device
 */
export function createGRPCClient(meshIP: string, port?: number): GRPCClient {
  return new GRPCClient(meshIP, port);
}
